# LIL_OS

./: .cursorrules  .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  RELEASE_ASSESSMENT.md  lil-os  lil_os.daemon.yaml  lil_os.reset_checks.yaml  lil_os.rule_id.yaml  pyproject.toml  resume.md  test_rich.py
.github/: PERMISSIONS.md
docs/: ADAPTING.md  API.md  ARCHITECTURE.md  AUTH.md  CONTEXT_BUDGET.md  CONTEXT_HIERARCHY.md  CONTRIBUTING.md  DATA.md  DECISION_LOG.md  DEPLOYMENT.md  FEATURE_COMPLETENESS_CHECKLIST.md  GOVERNANCE.md  GOVERNANCE_HOOKS.md  IMPLEMENTATION_DIFFICULTY_ASSESSMENT.md  INSTALLATION.md  INSTALLATION_GUIDE.md  LIL_OS.md  LIL_OS2_ML_ARCHITECTURE.md  LIL_OS2_ML_COMPETITIVE_ANALYSIS.md  LIL_OS2_ML_MARKET_VALIDATION_FRAMEWORK.md  LIL_OS2_ML_PROJECT_ROADMAP.md  LIL_OS2_ML_PROTOTYPE_SPEC.md  LIL_OS2_ML_REQUIREMENTS.md  LIL_OS2_ML_USER_RESEARCH_FRAMEWORK.md  LIL_OS2_ML_VALUE_PROPOSITION.md  MASTER_RULES.md  ML_MODULE_ARCHITECTURE.md  ML_OPERATIONS_RUNBOOK.md  ML_TROUBLESHOOTING.md  ML_USER_GUIDE.md  OPTIMIZATION_RECOMMENDATIONS.md  PERFORMANCE.md  QUALITY.md  RESET_TRIGGERS.md  RULE_IDS.md  RUNTIME_ENFORCEMENT_ANALYSIS.md  SECURITY.md  SHELL_INTERFACE.md  SYSTEMS.md  TODOS.md  (+2 more)
lil_os/: __init__.py  box_designer.py  cli.py  cli_ux.py  cli_v2.py  daemon.py  decision_prompt.py  events.py  governance_detector.py  help_system.py  session.py  shell.py  shell_enhanced.py  status.py  watch.py
lil_os_ml/: __init__.py  cli.py  config.py
scripts/: lil_os_critical_change_warning.py  lil_os_reset_checks.py  lil_os_rule_id_lint.py  (+2 more)
(+51 files in other folders)
