[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lil-os"
version = "2.0.0"
description = "A constitutional substrate for AI-assisted software development"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
dependencies = [
    "watchdog>=3.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "scikit-learn>=1.3.0",
]
authors = [
    {name = "LIL Co.", email = "info@lilco.io"}
]
keywords = ["ai", "governance", "development", "automation", "cursor", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]

[project.scripts]
lil-os = "lil_os.cli:main"

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.0.0",
]

[tool.setuptools]
packages = ["lil_os", "lil_os_ml"]

[tool.setuptools.package-data]
lil_os = ["*.yaml"]

